middle and footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
     
-            <div class="first_block">
+            <div class="first_block desktop">
                 <div class="Main_info">
                     <h1>Spider-Man: Across the Spider-Verse</h1>
                     <p>After reuniting with Gwen Stacy, Brooklyn's full-time, friendly neighborhood Spider-Man is catapulted across the Multiverse, where he encounters a team of Spider-People charged with protecting its very existence. 
@@ -39,6 +39,71 @@
             </div>
 
         </div>
+
+
+
+        <div class="middle">
+
+            <div class="list">
+                <h1>Coming soon to theaters</h1>
+                <div class="movies">
+                    <div class="movie">
+                        <div class="img_placeholder">
+                            <img src="./image/flash.jpg" alt="img">
+                        </div>
+                        <p>The Flash</p>
+                    </div>
+
+                    <div class="movie">
+                        <div class="img_placeholder">
+                            <img src="./image/indi.jpg" alt="img">
+                        </div>
+                        <p>Indiana Jones and the Dial of Destiny</p>
+                    </div>
+
+                    <div class="movie">
+                        <div class="img_placeholder">
+                            <img src="./image/asteroid.jpg" alt="img">
+                        </div>
+                        <p>Asteroid City</p>
+                    </div>
+
+                    <div class="movie">
+                        <div class="img_placeholder">
+                            <img src="./image/mission.jpg" alt="img">
+                        </div>
+                        <p>Mission: Impossible - Dead Reckoning</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="quote">
+                <div class="container">
+                    <h2 class="text">Everyone keeps telling me how my story is supposed to go. Nah, I'ma do my own thing.</h2>
+                    <h4 class="author">- Miles Morales</h4>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+        <div class="ad">
+            <div class="container_ad">
+                <div class="left">
+                    <h1>Experience a wide range of events exclusively with us</h1>
+                    <p>Explore our diverse range of events and find the perfect one that suits your preferences.</p>
+                </div>
+                <button>Events</button>
+            </div>
+        </div>
+
+
+        <footer>
+            <p>&copy; 2023 Moon Light Pictures. All rights reserved.</p>
+        </footer>
 
     </body>
 </html>
