disappearing event div fixed

--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                 </div>
             </div>
 
-
-        </div>
-
-
-
-        <div class="ad">
-            <div class="container_ad">
-                <div class="left">
-                    <h1>Experience a wide range of events exclusively with us</h1>
-                    <p>Explore our diverse range of events and find the perfect one that suits your preferences.</p>
+            <div class="more_event">
+                <div class="container_events">
+                    <div class="left">
+                        <h1>Experience a wide range of events exclusively with us</h1>
+                        <p>Explore our diverse range of events and find the perfect one that suits your preferences.</p>
+                    </div>
+                    <button>Events</button>
                 </div>
-                <button>Events</button>
             </div>
         </div>
+
+
+
+        
 
 
         <footer>
